k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backstage-ingress
  namespace: idp-backstage
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - backstage.135.236.232.55.nip.io
      secretName: backstage-tls
  rules:
    - host: backstage.135.236.232.55.nip.io
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: backstage
                port:
                  number: 80
            path: /
